--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="content">
             <h4> Hello, my name is </h4>
-            <h1> Trần <span>Trung Kiên</span></h1>
+            <h1> Trần Trung <span>Kien</span></h1>
             <h3> I'm just a guy who want to be rich </h3>
             <div class="newslatter">
                 <form>
@@ -114,7 +114,7 @@
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-dribbble"></i></a>
         </div>>
-        <p class="end"> Copyright by Trần Trung Kiên </p>
+        <p class="end"> Copyright by Tran Trung Kien </p>
     </footer>
 </body>
 </html>
