--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <!--footer-->
     <footer>
-        <p> Trần Trung Kiên </p>
+        <p> Tran Trung Kien </p>
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quisquam hic ipsam dolorem aliquam. Totam architecto ratione ipsam facere mollitia quia ipsa dolores ullam illum labore consequuntur, molestiae nobis error. </p>
         <div class="social">
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
