--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="content">
             <h4> Hello, my name is </h4>
-            <h1> Trần Trung <span>Kien</span></h1>
+            <h1> Tran Trung <span>Kien</span></h1>
             <h3> I'm just a guy who want to be rich </h3>
             <div class="newslatter">
                 <form>
